2005-04-04  Bradley Bell  <btb@icculus.org>

	* arch/win32/mingw_init.c: remove redundnt joy_init()

2005-04-01  Chris Taylor  <chris@icculus.org>

	* main/game.c, main/editor/kdefs.h, main/editor/kfuncs.c,
	main/editor/med.c: "Go to Main Menu" now works in editor

	* main/editor/segment.c: set Highest_vertex_index and
	Highest_segment_index to 0 when creating a new mine (avoids
	problems with saving when another level was previously loaded)

2005-03-31  Chris Taylor  <chris@icculus.org>

	* main/bm.c, main/bm.h, main/bmread.c, main/editor/editor.h,
	main/editor/eglobal.c, main/editor/eobject.c,
	main/editor/medrobot.c, main/editor/objpage.c,
	main/editor/objpage.h: remove ObjType, ObjId, ObjStrength and
	OL_ constants; use "object" instead of "robot" in some places;
	draw and place reactors with correct modelnum

	* main/editor/texpage.c: no using TmapList, initialise texture
	category globals, no CurrentTmap (just use CurrentTexture)

2005-03-29  Bradley Bell  <btb@icculus.org>

	* mem/mem.c: remove obsolete malloc.h

2005-03-20  Bradley Bell  <btb@icculus.org>

	* Makefile.am: add some stuff to dist

	* main/game.c, main/game.h, main/inferno.c, main/menu.c: added
	MAX_FPS constant

	* console/CON_console.c: Fixed console cursor positioning.

	* main/text.c: revert to Error if text file not found.

2005-03-20  Martin Schaffner  <schaffnerb@gmx.ch>

	* ui/.cvsignore: New file

2005-03-17  Bradley Bell  <btb@icculus.org>

	* arch/win32/midi.c: Add RCS ID tag

	* README, VisualC/d2x/d2x.dsp, VisualC/d2xgl/d2xgl.dsp,
	VisualC/libmve/libmve.dsp, VisualC/mveplayer/mveplayer.dsp:
	Update SDL to 1.2.8

2005-03-16  Bradley Bell  <btb@icculus.org>

	* main/bm.c, main/bm.h: use hardcoded value instead of
	sizeof(tmap_info), since size depends on whether editor is built
	or not.

	* ui/mouse.c: gcc doesn't like multi-line // comments

	* main/dumpmine.c: get rid of compiler warnings

2005-03-15  Bradley Bell  <btb@icculus.org>
