@@ -1,6 +1,8 @@
 2005-04-04  Bradley Bell  <btb@icculus.org>
 
-	* arch/win32/mingw_init.c: remove redundnt joy_init()
+	* arch/win32/midi.c: don't play midi if -nosound
+
+	* arch/win32/mingw_init.c: remove redundant joy_init()
 
 2005-04-01  Chris Taylor  <chris@icculus.org>
 
